--- a/src/static/codeform/codeform.less
+++ b/src/static/codeform/codeform.less
@@ -1,84 +1,9 @@
-.editor-container {
+.codeform {
     position: relative;
     height: 100%;
     }
 
-.CodeMirror {
-    height: 100% !important;
-    width: 100% !important;
-    }
-
-.CodeMirror-vscrollbar {
-    bottom: 25px !important;
-    }
-
-.CodeMirror-hscrollbar {
-    right: 109px !important;
-    left: 0 !important;
-    }
-
-.CodeMirror-gutters {
-    border-right: 0px;
-    }
-
-
-.CodeMirror div.CodeMirror-cursor {
-    border-left-width: 1px;
-    border-left-style: solid;
-    border-left-color: inherit;
-    }
-
-.CodeMirror-matchingbracket {
-    text-decoration: underline;
-    }
-
-
-
-
-.CodeMirror {
-    font-family: Monaco, Menlo, "Ubuntu Mono", Consolas, source-code-pro, monospace;
-    font-size: 20px;
-    height: 100%;
-    }
-
-.errors-gutter {
-    width: 1em;
-    }
-
-
-
-
-
-.gutter-marker-error::before {
-    width: 1em;
-    line-height: 1.2em;
-    font-size: .8em;
-    content: '\e802';
-    color: #ff4848;
-    font-family: 'fontello';
-    font-style: normal;
-    font-weight: normal;
-    speak: none;
-    display: inline-block;
-    margin-right: .2em;
-    text-align: center;
-    font-variant: normal;
-    text-transform: none;
-    }
-
-.gutter-marker-error:hover::after {
-    content: attr(data-title);
-    display: block;
-    position: absolute;
-    font-size: 14px;
-    white-space: pre;
-    border-radius: .3em;
-    padding: .3em;
-    left: 2em;
-    }
-
-
-#execbar {
+.codeform__execbar {
     position: absolute;
     bottom: 0;
     right: 0;
@@ -86,6 +11,8 @@
     padding: .2em;
     border-top-left-radius: .3em;
     white-space: nowrap;
+
+    background-color: #eee;
     }
 
 .btn-action {
@@ -119,3 +46,51 @@ button::-moz-focus-inner {
     border: 0;
     padding: 0;
     }
+
+
+.codeform__spinner {
+    visibility: hidden;
+    overflow: hidden;
+    z-index: 1000;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    background-color: rgba(0,0,0,.1);
+    opacity: 0;
+    transition: opacity .5s ease;
+    }
+
+.codeform__spinner--visible {
+    visibility: visible;
+    opacity: 1;
+    }
+
+.codeform__spinner::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -.5em;
+    margin-left: -.5em;
+    font-size: 40px;
+    opacity: .5;
+
+    width: 1em;
+    height: 1em;
+    border: .2em solid;
+    border-top-color: transparent;
+    border-left-color: transparent;
+    border-radius: 50%;
+    box-sizing: border-box;
+    transform-origin: center center;
+    transition: transform 1000s linear;
+    // animation: 'codeform-spin';
+    }
+
+.codeform__spinner--visible::before {
+    transform: rotate(700000deg);
+    }
+
