--- a/src/static/main/main.css
+++ b/src/static/main/main.css
@@ -4,19 +4,64 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	font-family: 'DejaVu Sans', 'Verdana', sans;
     font-size: 16px;
-}
+	font-family: 'DejaVu Sans',
+				 'Verdana',
+				 sans-serif;
+
+	color: #555;
+    background-color: #eee;
+	}
 
 .main__splitpanel-h,
 .main__splitpanel-v,
 .main__codeform,
-.main__output {
+.main__output,
+.main__nav {
 	display: block;
 	width: 100%;
 	height: 100%;
-}
+	}
 
-.main__output {
+.main__nav {
+	overflow-x: hidden;
+	overflow-y: auto;
+	}
+
+/*iframe*/.main__output {
 	border: none;
-}
+	}
+
+.main__nav,
+.main__codeform,
+.main__output {
+    background-color: #fcfcfc;
+	}
+
+
+*::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+    padding: 2px;
+    }
+
+*::-webkit-scrollbar,
+*::-webkit-scrollbar-corner {
+    background-color: #ddd;
+    }
+
+*::-webkit-scrollbar-button:start:decrement,
+*::-webkit-scrollbar-button:end:increment {
+    display: block;
+    height: 0;
+    width: 0;
+    background-color: transparent;
+    }
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 6px;
+    border: 2px solid;
+
+    background-color: #999;
+    color: #ddd;
+    }
