--- a/src/static/nav/myqueries/myqueries.less
+++ b/src/static/nav/myqueries/myqueries.less
@@ -11,7 +11,7 @@
 
     &:hover,
     &--active {
-        background-color: #ccc;
+        background-color: rgba(0,0,0,.1);
     }
 
     &--active &__name {
