--- a/src/static/nav/tree/tree.less
+++ b/src/static/nav/tree/tree.less
@@ -1,35 +1,44 @@
 /* children indent */
-.tree__node > .tree {
+.treenode > .tree {
     padding-left: 1.3em;
 }
 
 .tree {
     padding: 0;
-    margin: 0;
-    padding-left: 1em;
+    margin: 0;    padding-left: 1em;
     list-style-type: none;
     white-space: nowrap;
+}
 
-    &__node {
-        position: relative; /* for toggler absolute pos */
+.treenode {
 
-        &--groupstart {
-            border-top-width: 1px;
-            border-top-style: dotted;
-            padding-top: .2em;
-            margin-top: .2em;
-        }
+    position: relative; /* for toggler absolute pos */
+
+    &--groupstart {
+        border-top-width: 1px;
+        border-top-style: dotted;
+        padding-top: .2em;
+        margin-top: .2em;
     }
 
-    &__node-header {
+    &__header {
         padding: .125em .25em;
+        display: block;
+        cursor: pointer;
+        overflow: hidden;
+        text-overflow: ellipsis;
 
         &--active {
             font-weight: bold;
         }
+
+        &--active,
+        &:hover {
+            background-color: rgba(0,0,0,.1);
+        }
     }
 
-    &__node-toggler {
+    &__toggler {
         position: absolute;
         left: -1.1em;
         top: .1875em;
@@ -66,7 +75,7 @@
         }
     }
 
-    &__node-toggler-icon {
+    &__toggler-icon {
         display: block;
 
         &--collapsed::before,
@@ -104,7 +113,7 @@
         }
     }
 
-    &__node-icon {
+    &__icon {
 
         &::before,
         &::after {
@@ -157,7 +166,7 @@
         &--fkcolumn::after { content: '\e803'; }
     }
 
-    &__node-name {
+    &__name {
         display: inline-block;
         vertical-align: bottom;
         width: 100%;
@@ -167,7 +176,7 @@
         text-decoration: none;
     }
 
-    &__node-comment {
+    &__comment {
         opacity: .7;
     }
 }
