--- a/src/static/codeform/codeform.less
+++ b/src/static/codeform/codeform.less
@@ -15,15 +15,14 @@
     background-color: #eee;
     }
 
-.btn-action {
+/*button*/.codeform__exec-table,
+/*button*/.codeform__exec-map {
     border-top: 1px solid transparent; /* for simmetric align */
     border-bottom: 1px dotted;
     margin-left: .2em;
     margin-right: .2em;
     font-size: 0.8125em;
-    }
 
-button {
     outline: none;
     margin: 0;
     padding: 0;
@@ -35,6 +34,10 @@ button {
     line-height: 1em;
     cursor: pointer;
     white-space: nowrap;
+    }
+
+/*button*/.codeform__exec-table {
+    font-weight: bold;
     }
 
 button::-webkit-focus-inner {
