--- a/src/static/codeform/codeform.less
+++ b/src/static/codeform/codeform.less
@@ -3,6 +3,14 @@
     height: 100%;
     }
 
+.codeform__textarea {
+    width: 100%;
+    height: 100%;
+    border: none;
+    background: none;
+    padding: 0;
+    }
+
 .codeform__execbar {
     position: absolute;
     bottom: 0;
