playing with commonjs

--- a/src/static/nav/tree/tree.less
+++ b/src/static/nav/tree/tree.less
@@ -1,13 +1,12 @@
-/* children indent */
-.treenode > .tree {
-    padding-left: 1.3em;
-}
-
 .tree {
     padding: 0;
     margin: 0;    padding-left: 1em;
     list-style-type: none;
     white-space: nowrap;
+}
+
+.tree--children {
+    padding-left: 1.3em;
 }
 
 .treenode {
