--- a/src/static/src/output/table/table.css
+++ b/src/static/src/output/table/table.css
@@ -4,19 +4,22 @@
 .dark .rowset-invalid-row td { background-color: #551414; }
 .dark .error { color: #ff4c4c; }
 .dark .message { border-bottom-color: #333; }
-.dark .rowset tr:nth-child(even) { color: #aaa; }
+.dark .rowset tr:nth-child(even) {
+    color: #aaa;
+    background-color: transparent;
+    }
 
-.dark .scrollbox::-webkit-scrollbar,
-.dark .scrollbox::-webkit-scrollbar-corner {
+.dark *::-webkit-scrollbar,
+.dark *::-webkit-scrollbar-corner {
     background-color: #222;
     }
 
-.dark .scrollbox::-webkit-scrollbar-thumb {
+.dark *::-webkit-scrollbar-thumb {
     background-color: rgba(255,255,255,.2);
     color: #222;
     }
 
-.dark .scrollbox {
+.dark * {
     scrollbar-base-color: #333;
     scrollbar-3dlight-color: #222;
     scrollbar-highlight-color: #222;
@@ -29,21 +32,21 @@
 
 
 
-.light { color: #555; background-color: #fcfcfc; }
-.light .rowset { border-color: #aaa; }
-.light .rowset th { background-color: #ddd; }
-.light .rowset-invalid-row td { background-color: #ffd7d7; }
-.light .error { color: #ff4c4c; }
-.light .message { border-bottom-color: #eee; }
-.light .rowset tr:nth-child(even) { background-color: #eee; }
+/*.light*/body { color: #555; background-color: #fcfcfc; }
+/*.light*/ .rowset { border-color: #aaa; }
+/*.light*/ .rowset th { background-color: #ddd; }
+/*.light*/ .rowset-invalid-row td { background-color: #ffd7d7; }
+/*.light*/ .error { color: #ff4c4c; }
+/*.light*/ .message { border-bottom-color: #eee; }
+/*.light*/ .rowset tr:nth-child(even) { background-color: #eee; }
 
 
-.light .scrollbox::-webkit-scrollbar,
-.light .scrollbox::-webkit-scrollbar-corner {
+/*.light*/ *::-webkit-scrollbar,
+/*.light*/ *::-webkit-scrollbar-corner {
     background-color: #ddd;
     }
 
-.light .scrollbox::-webkit-scrollbar-thumb {
+/*.light*/ *::-webkit-scrollbar-thumb {
     background-color: #999;
     color: #ddd;
     }
@@ -51,21 +54,21 @@
 
 
 
-.scrollbox::-webkit-scrollbar {
+*::-webkit-scrollbar {
     width: 12px;
     height: 12px;
     padding: 2px;
     }
 
-.scrollbox::-webkit-scrollbar-button:start:decrement,
-.scrollbox::-webkit-scrollbar-button:end:increment {
+*::-webkit-scrollbar-button:start:decrement,
+*::-webkit-scrollbar-button:end:increment {
     display: block;
     height: 0;
     width: 0;
     background-color: transparent;
     }
 
-.scrollbox::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
     border-radius: 6px;
     border: 2px solid;
     }
