--- a/src/ui/err/err.css
+++ b/src/ui/err/err.css
@@ -6,7 +6,7 @@ html {
 body {
     width: 600px;
     margin: 5em auto;
-    padding: 50px;
+    padding: 20px 50px;
     background-color: white;
     border-radius: 2em;
 }
