--- a/src/ui/output/queryplan/queryplan.css
+++ b/src/ui/output/queryplan/queryplan.css
@@ -1,3 +1,8 @@
+.queryplan__edge {
+    fill: none;
+    stroke: #555;
+    }
+
 .light { color: #555; }
 .light .queryplan-overlay { background-color: rgba(255,255,255,.7); }
 .light .node .node-back { fill: #fff; }
@@ -72,7 +77,7 @@
 
 .node .node-overlay { fill: #888; fill-opacity: .5; }
 
- 
+
 .queryplan,
 .queryplan-tip {
     font-family: Ubuntu, Verdana, sans-serif;
