--- a/src/ui/output/queryplan/queryplan.css
+++ b/src/ui/output/queryplan/queryplan.css
@@ -1,3 +1,12 @@
+.zoompanable--zoompanning {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .queryplan__edge {
     fill: none;
     stroke: #555;
