--- a/src/ui/output/table/table.css
+++ b/src/ui/output/table/table.css
@@ -1,3 +1,5 @@
+/* @import url("../queryplan/queryplan.css"); */
+
 .dark { color: #ddd; background-color: #272822; }
 .dark .rowset { border-color: #555; }
 .dark .rowset th { background-color: #444; }
