--- a/ui/src/output/queryplan/queryplan.css
+++ b/ui/src/output/queryplan/queryplan.css
@@ -96,6 +96,7 @@
 
 
 .queryplan-overlay {
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -104,6 +105,11 @@
 
     background-size: 2px 100%;
     }
+
+.queryplan-overlay--visible {
+    display: block;
+    }
+
 
 .queryplan {
     overflow: hidden;
@@ -127,6 +133,15 @@
     -webkit-user-select: none;
        -moz-user-select: none;
             user-select: none;
+    }
+
+/*.light*/ .queryplan--focused {
+    background-color: rgba(255,255,255,.7);
+    background-image: linear-gradient(to left
+                    ,rgba(0,0,0,.0)   0
+                    ,rgba(0,0,0,.0)  1px
+                    ,rgba(0,0,0,.1)  1px
+                    ,rgba(0,0,0,.1)  2px);
     }
 
 .dark .queryplan--focused {
