--- a/ui/src/output/queryplan/queryplan.css
+++ b/ui/src/output/queryplan/queryplan.css
@@ -96,8 +96,8 @@
     }
 
 .queryplan-preview > * {
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
     }
 /*
 .queryplan-preview::before {
